<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_cart"
            android:title="Categories" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_my_order" />
        <item
            android:id="@+id/nav_wishList"
            android:icon="@drawable/ic_star_border_black"
            android:title="@string/menu_my_wish_list" />

        <item
            android:id="@+id/nav_shareEarn"
            android:icon="@drawable/ic_money"
            android:title="Share &amp; Earn" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="My Profile" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="Wallet" />

        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_info"
            android:title="FAQs" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_cart"
            android:title="About us" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="Share" />

        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call"
            android:title="Call us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_logout" />


    </group>


</menu>
